<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:text="@string/serial_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="numberDecimal"
        android:hint="@string/serial"
        android:id="@+id/et_exercise_item_serial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:text="@string/reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="numberDecimal"
            android:hint="@string/reps_num"
            android:id="@+id/et_exercise_item_reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>