<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_daily_workout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hu.bme.aut.workoutplaner.AddDailyWorkoutActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/workout_plan_name"
            android:textSize="20dp" />

        <EditText
            android:inputType="text"
            android:id="@+id/et_add_dworkout_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/place_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_search_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search_exercise" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_search" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_list_exercises"
        android:layout_width="match_parent"
        android:layout_height="170dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/added_exercises"
        android:textSize="20sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_added_exercises"
        android:layout_width="match_parent"
        android:layout_height="130dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save_dworkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/save" />

        <Button

            android:id="@+id/btn_cancel_dworkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|right"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>
