<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_add_exercise_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_exercise_name"
                android:inputType="text"
                android:paddingBottom="15dp" />

            <EditText
                android:id="@+id/et_add_exercise_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_exercise_desc"
                android:inputType="textMultiLine"
                android:paddingBottom="15dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/select_ms"
                android:textSize="17sp" />

            <Spinner
                android:id="@+id/picker_ms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/weight" />

            <Button
                android:id="@+id/add_image_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_image" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>